# agent-diva

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MERGE_PLAN.md  README.md  README.zh-CN.md  TODOLIST.md  build.json  build_utf8.json  clippy.toml  context_window_demo.py  debug_attachment.html  deny.toml  justfile  project-context.md  rustfmt.toml
agent-diva-agent/: Cargo.toml  README.md  project-context.md
agent-diva-agent/src/: agent_loop.rs  consolidation.rs  context.rs  context_budget.rs  diary.rs  lib.rs  loop_guard.rs  mentle_discovery.rs  mentle_runtime.rs  runtime_control.rs  skills.rs  subagent.rs  subagent_policy.rs  subagent_tool_capabilities.rs  swarm_doctor.rs  swarm_process_bus.rs  token_estimate.rs  tool_assembly.rs
agent-diva-agent/src/agent_loop/: context_retry.rs  loop_guard.rs  loop_runtime_control.rs  loop_tools.rs  loop_turn.rs
agent-diva-agent/src/capability/: error.rs  mod.rs  persist.rs  registry.rs  validate.rs
agent-diva-agent/src/compaction/: compaction_exec.rs  mod.rs  prompt.rs  quality.rs
agent-diva-agent/src/mask/: error.rs  mask_file.rs  mask_prompt_composer.rs  mask_registry.rs  mod.rs  tool_policy.rs
agent-diva-agent/src/planning/: context.rs  hooks.rs  mod.rs  nag.rs  orchestrator.rs  todo_planner.rs  tools.rs  verifier.rs
agent-diva-agent/src/tool_config/: builtin.rs  mentle.rs  mod.rs  network.rs
agent-diva-agent/tests/: compaction_e2e.rs  compaction_integration.rs  compaction_real_test.rs
agent-diva-channels/: Cargo.toml  project-context.md
agent-diva-channels/src/: base.rs  dingtalk.rs  discord.rs  email.rs  feishu.rs  generic_pipe.rs  irc.rs  lib.rs  manager.rs  matrix.rs  mattermost.rs  neuro_link.rs  nextcloud_talk.rs  qq.rs  slack.rs  telegram.rs  whatsapp.rs
agent-diva-channels/src/common/: mod.rs
agent-diva-channels/tests/: qq_reconnect_integration.rs  whatsapp_bridge_integration.rs
agent-diva-cli/: Cargo.toml  project-context.md
agent-diva-cli/src/: chat_commands.rs  cli_runtime.rs  client.rs  lib.rs  main.rs  provider_commands.rs  service.rs
agent-diva-cli/tests/: config_commands.rs  direct_chat_smoke.rs  integration_logs.rs
agent-diva-core/: Cargo.toml  README.md  project-context.md
agent-diva-core/src/: attachment.rs  debug.rs  error.rs  error_context.rs  lib.rs  logging.rs  person_seam.rs  reasoning.rs  redaction.rs
agent-diva-core/src/auth/: mod.rs  oauth_common.rs  pending.rs  profiles.rs  service.rs  store.rs
agent-diva-core/src/bus/: events.rs  mod.rs  queue.rs  run_telemetry.rs
agent-diva-core/src/config/: loader.rs  mod.rs  schema.rs  validate.rs
agent-diva-core/src/cron/: mod.rs  service.rs  types.rs
agent-diva-core/src/heartbeat/: mod.rs  service.rs  types.rs
agent-diva-core/src/memory/: hybrid.rs  manager.rs  mod.rs  provider.rs  storage.rs
agent-diva-core/src/planning/: events.rs  ids.rs  mod.rs  model.rs  render.rs  store.rs
agent-diva-core/src/security/: config.rs  error.rs  mod.rs  path.rs  policy.rs  rate_limit.rs
agent-diva-core/src/session/: manager.rs  mod.rs  store.rs
agent-diva-core/src/soul/: mod.rs
agent-diva-core/src/trace/: event.rs  id.rs  logger.rs  mod.rs
agent-diva-core/src/usage/: budget.rs  mod.rs  query.rs  types.rs  writer.rs
agent-diva-core/src/utils/: mod.rs
agent-diva-files/: Cargo.toml  README.md
agent-diva-files/docs/: LEARNING.md  acceptance.md  debugging.md
agent-diva-files/src/: backend.rs  channel.rs  config.rs  handle.rs  hooks.rs  index.rs  lib.rs  manager.rs  storage.rs
agent-diva-gui/src-tauri/: Cargo.toml  check_browsers.py  tauri.conf.json  搞笑小说.txt
agent-diva-manager/: Cargo.toml  project-context.md
agent-diva-manager/src/: debug_bundle.rs  file_service.rs  handlers.rs  lib.rs  manager.rs  mcp_service.rs  planning_service.rs  runtime.rs  server.rs  skill_service.rs  state.rs  token_stats.rs
agent-diva-memory/: Cargo.toml
agent-diva-memory/src/: backend.rs  compat.rs  compat_source.rs  contracts.rs  derived.rs  embeddings.rs  layout.rs  lib.rs  recall.rs  retrieval.rs  service.rs  snapshot.rs  sqlite_recall.rs  sync.rs  types.rs
agent-diva-migration/: Cargo.toml  project-context.md
agent-diva-migration/src/: config_migration.rs  main.rs  memory_migration.rs  session_migration.rs
agent-diva-neuron/: Cargo.toml  project-context.md
agent-diva-neuron/src/: events.rs  executor.rs  lib.rs  node.rs  types.rs
agent-diva-neuron/tests/: neuron_smoke.rs
agent-diva-providers/: Cargo.toml  README.md  project-context.md
agent-diva-providers/examples/: minimax_sync_tts.rs  siliconflow_asr.rs  siliconflow_chat_completions.rs  siliconflow_tts.rs
agent-diva-providers/src/: base.rs  catalog.rs  discovery.rs  http_util.rs  lib.rs  litellm.rs  ollama.rs  providers.yaml  registry.rs  transcription.rs
agent-diva-providers/tests/: ollama_streaming.rs  ollama_tools.rs
agent-diva-sandbox/: Cargo.toml  README.md
agent-diva-sandbox/src/: approval.rs  decision.rs  error.rs  exec_policy.rs  filesystem.rs  guardian.rs  lib.rs  manager.rs  orchestrator.rs  policy.rs  rules.rs
agent-diva-service/: Cargo.toml  project-context.md
agent-diva-service/src/: main.rs
agent-diva-swarm/: Cargo.toml  README.md
agent-diva-swarm/docs/: ADR_FR21_FORCE_LIGHT_AND_CORTEX_OFF.md  ADR_ORCHESTRATION_SPI_SHANNON_BRIDGE.md  CORTEX_OFF_FR17_MAINTAINER_GUIDE.md  CORTEX_OFF_SIMPLIFIED_MODE.md  PROCESS_EVENTS_CORTEX_OFF.md  RUN_TELEMETRY_FR22.md  handoff-checkpoint-v0.md  process-events-v0.md
agent-diva-swarm/src/: convergence.rs  cortex.rs  execution_tier.rs  handoff_checkpoint.rs  lib.rs  light_intent_rules.rs  light_path_limits.rs  minimal_turn.rs  neuro_overview.rs  orchestration_port.rs  prelude_config.rs  process_events.rs  run_telemetry.rs
agent-diva-tooling/: Cargo.toml  README.md
agent-diva-tooling/src/: base.rs  lib.rs  registry.rs
agent-diva-tools/: Cargo.toml  README.md  project-context.md
agent-diva-tools/src/: attachment.rs  base.rs  cron.rs  filesystem.rs  lib.rs  mcp.rs  mcp_sdk.rs  memory.rs  message.rs  registry.rs  sanitize.rs  shell.rs  spawn.rs  web.rs  wtf.rs
(+1686 files in other folders)
