[workspace]
resolver = "2"
members = [
    "agent-diva-core",
    "agent-diva-agent",
    "agent-diva-neuron",
    "agent-diva-providers",
    "agent-diva-channels",
    "agent-diva-tools",
    "agent-diva-cli",
    "agent-diva-service",
    "agent-diva-migration",
    "agent-diva-gui/src-tauri", "agent-diva-manager",
]

[workspace.package]
version = "0.4.1"
authors = ["mastwet (projectViVY Team, undefine foundation)"]
rust-version = "1.80.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }
futures = "0.3"
async-trait = "0.1"
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "local-time"] }
tracing-appender = "0.2"

# Configuration
config = "0.14"
dotenv = "0.15"
dirs = "5.0"

# Time and date
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
cron = "0.12"
tokio-cron-scheduler = "0.10"

# HTTP and WebSocket
# rustls-tls: Windows Schannel often fails TLS handshake to some APIs (e.g. api.deepseek.com);
# rustls matches behavior on macOS/Linux and avoids native-tls/Schannel for HTTPS.
reqwest = { version = "0.11", default-features = false, features = ["json", "socks", "multipart", "blocking", "rustls-tls", "stream"] }
tokio-tungstenite = "0.21"
http = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

# Text encoding (Windows shell pipe decoding)
encoding_rs = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"
bytes = "1.5"
which = "6.0"
windows-service = "0.7"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Testing
mockito = "1.2"
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
