[package]
name = "agent-diva-agent"
version = "0.4.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["mastwet (projectViVY Team, undefine foundation)"]
license = "MIT"
repository = "https://github.com/ProjectViVy/agent-diva"
description = "Agent logic for agent-diva"

[dependencies]
agent-diva-core = { path = "../agent-diva-core", version = "0.4.0" }
agent-diva-providers = { path = "../agent-diva-providers", version = "0.4.0" }
agent-diva-swarm = { path = "../agent-diva-swarm", version = "0.4.0" }
agent-diva-tools = { path = "../agent-diva-tools", version = "0.4.0" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
regex = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
