[package]
name = "agent-diva-agent"
version = "0.5.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["mastwet (projectViVY Team, undefine foundation)"]
license = "MIT"
repository = "https://github.com/ProjectViVy/agent-diva"
description = "Agent logic for agent-diva"
readme = "README.md"

[features]
default = []
mentle = ["agent-diva-core/mentle", "dep:memtle"]

[dependencies]
agent-diva-core = { path = "../agent-diva-core", version = "0.5.0" }
agent-diva-files = { path = "../agent-diva-files", version = "0.5.0" }
agent-diva-providers = { path = "../agent-diva-providers", version = "0.5.0" }
agent-diva-tooling = { workspace = true }
agent-diva-tools = { path = "../agent-diva-tools", version = "0.5.0" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
regex = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }

[dependencies.memtle]
workspace = true
optional = true

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
sqlx = { workspace = true }
