[package]
name = "agent-diva-channels"
version = "0.2.0"
edition = "2021"
authors = ["agent-diva contributors"]
license = "MIT"
repository = "https://github.com/HKUDS/agent-diva"
description = "Chat platform integrations for agent-diva"

[dependencies]
agent-diva-core = { path = "../agent-diva-core" }
agent-diva-providers = { path = "../agent-diva-providers" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP and WebSocket
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
slack-morphism = { version = "2.17", default-features = false, features = ["hyper"] }

# Telegram Bot API
teloxide = { version = "0.13", features = ["macros", "webhooks"] }

# Logging and tracing
tracing = { workspace = true }

# Utilities
regex = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

# Email support (using blocking I/O for simplicity)
imap = "2.4"  # Blocking IMAP client (stable version)
native-tls = "0.2"  # TLS support
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "native-tls"] }
mail-parser = "0.9"
html-escape = "0.2"

# Feishu/Lark support
# Using pure Rust implementation with tokio-tungstenite and reqwest
# instead of open-lark SDK to maintain consistency with other channels

[dev-dependencies]
tokio-test = { workspace = true }
