[package]
name = "agent-diva-channels"
version = "0.4.9"
edition = "2021"
rust-version = "1.80.0"
authors = ["mastwet (projectViVY Team, undefine foundation)"]
license = "MIT"
repository = "https://github.com/ProjectViVy/agent-diva"
description = "Chat platform integrations for agent-diva"

[dependencies]
agent-diva-core = { path = "../agent-diva-core", version = "0.4.9" }
agent-diva-providers = { path = "../agent-diva-providers", version = "0.4.9" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP and WebSocket
reqwest = { workspace = true }
# QQ OpenAPI: workspace reqwest uses rusttls; bots.qq.com often needs native-tls/Schannel on Windows.
reqwest_qq = { package = "reqwest", version = "0.12", default-features = true, features = ["json"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
slack-morphism = { version = "2.17", default-features = false, features = ["hyper"] }

# Telegram Bot API
teloxide = { version = "0.13", features = ["macros", "webhooks"] }

# Logging and tracing
tracing = { workspace = true }
regex.workspace = true
chrono = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
mime_guess = "2.0"

# TLS support
native-tls = "0.2"
tokio-native-tls = "0.3"
base64 = "0.22"

# Email support (using blocking I/O for simplicity)
imap = "2.4"  # Blocking IMAP client (stable version)
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "native-tls"] }
mail-parser = "0.9"
html-escape = "0.2"

# Feishu/Lark support
# Using pure Rust implementation with tokio-tungstenite and reqwest
# instead of open-lark SDK to maintain consistency with other channels
prost = "0.13"
prost-derive = "0.13"
futures-util = "0.3"

[dev-dependencies]
tokio-test = { workspace = true }
