[package]
name = "agent-diva-cli"
version = "0.4.10"
edition = "2021"
rust-version = "1.80.0"
authors = ["mastwet (projectViVY Team, undefine foundation)"]
license = "MIT"
repository = "https://github.com/ProjectViVy/agent-diva"
description = "CLI application for agent-diva"

[[bin]]
name = "agent-diva"
path = "src/main.rs"

[dependencies]
agent-diva-core = { path = "../agent-diva-core", version = "0.4.10" }
agent-diva-agent = { path = "../agent-diva-agent", version = "0.4.10" }
agent-diva-providers = { path = "../agent-diva-providers", version = "0.4.10" }
agent-diva-channels = { path = "../agent-diva-channels", version = "0.4.10" }
agent-diva-tools = { path = "../agent-diva-tools", version = "0.4.10" }
agent-diva-manager = { path = "../agent-diva-manager", version = "0.4.10" }
agent-diva-files = { path = "../agent-diva-files", version = "0.4.10" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"

# Configuration
dirs = { workspace = true }

# Time utilities
chrono = { workspace = true }

# HTTP Client
reqwest = { workspace = true }
futures = { workspace = true }
eventsource-stream = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockito = { workspace = true }

# cargo-deb 配置 - 用于生成 .deb 包
[package.metadata.deb]
maintainer = "Agent Diva Team <agent-diva@example.com>"
copyright = "2024, Agent Diva Contributors"
license-file = ["../LICENSE", "0"]
extended-description = """\
Agent Diva is a modular AI assistant framework that connects multiple chat platforms
to multiple LLM providers with a built-in tool system."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/agent-diva", "usr/bin/agent-diva", "755"],
    ["../LICENSE", "usr/share/doc/agent-diva/LICENSE", "644"],
    ["../README.md", "usr/share/doc/agent-diva/README.md", "644"],
]

[package.metadata.deb.variants.x86_64]
name = "agent-diva"

# 额外文件: systemd 服务
[package.metadata.deb.systemd-units]
unit-name = "agent-diva"
unit-scripts = "../contrib/systemd"
enable = false
start = false
