[package]
name = "agent-diva-core"
version = "0.3.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["mastwet@UndefineFoundation"]
license = "MIT"
repository = "https://github.com/ProjectViVy/agent-diva"
description = "Core types and traits for agent-diva"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = { workspace = true }

# Configuration
config = { workspace = true }
dirs = { workspace = true }

# Time and date
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }

# Utilities
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
