[package]
name = "agent-diva-files"
version = "0.4.10"
edition = "2021"
rust-version = "1.80.0"
authors = ["mastwet (projectViVY Team, undefine foundation)"]
license = "MIT"
repository = "https://github.com/ProjectViVy/agent-diva"
description = "File management system for agent-diva with deduplication and reference counting"
readme = "README.md"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Additional dependencies for file operations
sha2 = "0.10"
hex = "0.4"
async-trait = { workspace = true }
dirs = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
