[package]
name = "agent-diva-manager"
version = "0.4.10"
edition = "2021"
authors = ["mastwet (projectViVY Team, undefine foundation)"]
license = "MIT"
repository = "https://github.com/ProjectViVy/agent-diva"
description = "Manager server for Agent Diva"
rust-version = "1.80.0"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
zip = "0.6"
chrono = { workspace = true }

# Internal dependencies
agent-diva-core = { path = "../agent-diva-core", version = "0.4.10" }
agent-diva-agent = { path = "../agent-diva-agent", version = "0.4.10" }
agent-diva-providers = { path = "../agent-diva-providers", version = "0.4.10" }
agent-diva-channels = { path = "../agent-diva-channels", version = "0.4.10" }
agent-diva-tools = { path = "../agent-diva-tools", version = "0.4.10" }
agent-diva-files = { path = "../agent-diva-files", version = "0.4.10" }
mime_guess = "2.0"

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
