[package]
name = "agent-diva-providers"
version = "0.2.0"
edition = "2021"
authors = ["agent-diva contributors"]
license = "MIT"
repository = "https://github.com/HKUDS/agent-diva"
description = "LLM provider integrations for agent-diva"

[dependencies]
agent-diva-core = { path = "../agent-diva-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
serde_yaml.workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
mockito = { workspace = true }
