[package]
name = "agent-diva-providers"
version = "0.2.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["mastwet@UndefineFoundation"]
license = "MIT"
repository = "https://github.com/ProjectViVy/agent-diva"
description = "LLM provider integrations for agent-diva"

[dependencies]
agent-diva-core = { path = "../agent-diva-core", version = "0.2.0" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
serde_yaml.workspace = true

# Regex for text sanitization
regex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockito = { workspace = true }
tempfile = { workspace = true }
