[package]
name = "agent-diva-providers"
version = "0.4.9"
edition = "2021"
rust-version = "1.80.0"
authors = ["mastwet (projectViVY Team, undefine foundation)"]
license = "MIT"
repository = "https://github.com/ProjectViVy/agent-diva"
description = "LLM provider integrations for agent-diva"

[dependencies]
agent-diva-core = { path = "../agent-diva-core", version = "0.4.9" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
serde_yaml.workspace = true

# Regex for text sanitization
regex = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockito = { workspace = true }
