[package]
name = "agent-diva-tools"
version = "0.4.10"
edition = "2021"
rust-version = "1.80.0"
authors = ["mastwet (projectViVY Team, undefine foundation)"]
license = "MIT"
repository = "https://github.com/ProjectViVy/agent-diva"
description = "Built-in tools for agent-diva"
readme = "README.md"

[dependencies]
agent-diva-core = { path = "../agent-diva-core", version = "0.4.10" }
agent-diva-files = { path = "../agent-diva-files", version = "0.4.10" }
agent-diva-tooling = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Regex
regex = { workspace = true }

# Windows console / PowerShell pipe encoding (GBK vs UTF-8)
encoding_rs = { workspace = true }

# Time and date
chrono = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Utilities
which = { workspace = true }
anyhow = { workspace = true }
mime_guess = "2.0"
dirs = { workspace = true }

# MCP SDK from crates.io
rust-mcp-sdk = { version = "0.9", default-features = false, features = ["client", "stdio", "sse", "streamable-http"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
