[package]
name = "agent-diva-gui"
version = "0.4.1"
description = "A Tauri App for Agent Diva"
authors = ["mastwet (projectViVY Team, undefine foundation)"]
edition = "2021"

[lib]
name = "agent_diva_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
agent-diva-core = { path = "../../agent-diva-core" }
# GUI currently depends on CLI only for local runtime/status helpers. Manager
# companion/runtime APIs are consumed over HTTP from the Tauri bridge.
agent-diva-cli = { path = "../../agent-diva-cli" }
agent-diva-neuron = { path = "../../agent-diva-neuron" }
agent-diva-providers = { path = "../../agent-diva-providers" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
futures = "0.3"
eventsource-stream = "0.2"
once_cell = { workspace = true }
which = { workspace = true }

dirs.workspace = true
urlencoding = "2.1.3"
